<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zujia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--activity title string-->
    <string name="title_activity_custom_main">租家</string>
    <string name="title_activity_houses_list">搜索结果</string>
    <string name="title_activity_houses_map">地图显示</string>
    <string name="title_activity_custom_certification">实名认证</string>
    <string name="title_activity_custom_info">个人信息</string>
    <string name="title_activity_custom_post_want">发布租房需求</string>
    <string name="title_activity_custom_check_want">租房需求</string>
    <string name="title_activity_custom_feedback">反馈</string>
    <string name="title_activity_about">关于租家</string>
    <string name="title_activity_houses_pic_list">HousesPicListActivity</string>
    <string name="title_activity_search">搜索房屋</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_custom_setting">设置</string>

    <!-- custom certification page -->
    <string name="txtV_custom_certification_name">真实姓名</string>
    <string name="txtV_custom_certification_NO">身份证号</string>
    <string name="txtV_custom_certification_expiration_date">身份证有效日期至</string>
    <string name="btn_custom_certification_always">长期有效</string>
    <string name="txtV_custom_certification_front_pic">身份证图片正面</string>
    <string name="txtV_custom_certification_pic_pick">相册</string>
    <string name="txtV_custom_certification_pic_shoot">拍照</string>
    <string name="txtV_custom_certification_back_pic_">身份证图片背面</string>
    <string name="txtV_custom_certification_ques">密保问题</string>
    <string name="txtV_custom_certification_ans">答案</string>
    <string name="btn_custom_certification_submit">提交</string>

    <!-- about page -->
    <string name="btn_about_intro">功能介绍</string>
    <string name="btn_about_update">检查更新</string>
    <string name="btn_about_landlord_agreement">房东协议</string>
    <string name="btn_about_custom_agreement">房客协议</string>
    <string name="txtV_about_version">租家网1.0</string>

    <!-- post want page -->
    <string name="txtV_post_want_location">租房地点</string>
    <string name="txtV_post_want_money">租金上限</string>
    <string name="txtV_post_want_tag">元/月</string>
    <string name="txtV_post_want_date">最晚入住时间</string>
    <string name="txtV_post_type">租住户型</string>
    <string name="txtV_post_want_other">其他需求</string>

    <!-- check want page -->
    <string name="txtV_check_want_send">租家已将你的需求推送至15位合适的房东</string>

    <!-- custom info page -->
    <string name="btn_custom_info_change_avater">更换头像</string>
    <string name="txtV_custom_info_username">用户名</string>
    <string name="txtV_custom_info_phone_no">手机号</string>
    <string name="txtV_custom_info_mail">邮箱</string>

    <!-- search page -->
    <string name="search_one_room">一室</string>
    <string name="search_two_rooms">二室</string>
    <string name="search_three_rooms">三室</string>
    <string name="search_more_rooms">三室以上</string>
    <string name="btn_search_search">搜索</string>
    <string name="btn_search_around">查看附近房屋</string>
    <string name="hint_search_search">请输入地点，小区，地铁路线，站点名</string>

    
    <!--setting page-->
    <string name="txtV_setting_toast">接受新消息通知</string>
    <string name="txtV_setting_alarm">声音通知</string>
    <string name="txtV_setting_vibration">震动通知</string>
    <string name="txtV_setting_clear_cache">清除缓存</string>
    <string name="txtV_setting_clear_history">清空聊天记录</string>
    <string name="txtV_setting_change_password">更改密码</string>
    <string name="title_activity_house_details">HouseDetailsActivity</string>

    <!--house details page-->
    <string name="txtV_house_detail_detail">房屋详情</string>
    <string name="txtV_house_detail_state">房屋状态:</string>
    <string name="txtV_house_detail_type">房型:</string>
    <string name="txtV_house_detail_rent">出租:</string>
    <string name="txtV_house_detail_floor">楼层:</string>
    <string name="txtV_house_detail_date">最早入住:</string>
    <string name="txtV_house_detail_decoration">装修情况:</string>
    <string name="txtV_house_detail_furniture">家具:</string>
    <string name="txtV_house_detail_appliance">家电:</string>
    <string name="txtV_house_detail_other">其他:</string>
    <string name="txtV_house_detail_description">房屋描述:</string>
    <string name="btn_house_detail_contact">联系房东</string>

    <!--action bar title-->
    <string name="action_bar_title_search_item">搜索房屋</string>
    <string name="action_houses_sort">排序</string>
    <string name="action_houses_location">商圈</string>
    <string name="action_houses_filter">筛选</string>
    
    <!--login page-->
    <string name="editText_login_account">    请输入手机号</string>
    <string name="editText_login_password">    请输入密码</string>
    <string name="btn_login_login">登陆</string>
    <string name="txtV_login_forget_password">忘记密码？</string>
    <string name="txtV_login_sign_up">免费注册</string>
    <string name="txtV_login_other_account">其他账户登陆:</string>
    <string name="txtV_login_search_house">搜索房屋</string>
    <string name="txtV_login_pub_house">发布房屋</string>
    <string name="txtV_login_zujiabang">租家帮</string>

    <string name="error_invalid_phone">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_filter">FilterActivity</string>


    <!--house filter page-->
    <string name="txtV_filter_certification">只看认证房屋</string>
    <string name="txtV_filter_elevator">只看有电梯房屋</string>
    <string name="txtV_filter_decoration">只看精装修房屋</string>
    <string name="txtV_filter_size">户型</string>
    <string name="txtV_filter_money">租金</string>
    <string name="btn_filter_reset">重置</string>
    <string name="btn_filter_submit">提交</string>
    <string name="title_activity_sort">排序</string>
    
    <!--sort page-->
    <string name="txtV_sort_default">默认排序</string>
    <string name="txtV_sort_money">租金最低</string>
    <string name="txtV_sort_distance">距离最近</string>


    <!--custom main page-->
    <string name="btn_growth">成长值</string>
    <string name="btn_postWant">发布租房需求</string>
    <string name="btn_setting">设置</string>
    <string name="btn_feedback">意见反馈</string>
    <string name="btn_about">关于租家</string>
    <string name="btn_logout">退出登陆</string>

    <string name="rent_main">租家帮</string>
    <string name="rent_list_main">房屋管家、搬家、律师等</string>
    <string name="live_main">居家帮</string>
    <string name="live_list_main">房屋管家、搬家、律师等</string>
    <string name="appliance_main">家电帮</string>
    <string name="appliance_list_main">房屋管家、搬家、律师等</string>
    <string name="furniture_main">家具帮</string>
    <string name="furniture_list_main">房屋管家、搬家、律师等</string>
    <string name="life_main">生活帮</string>
    <string name="life_list_main">房屋管家、搬家、律师等</string>

    <string name="message_main">消息</string>
    <string name="contact_main">联系记录</string>
    <string name="zujiabang_main">租家帮</string>
    <string name="me_main">我</string>
    <string-array name="rent_service">
        <item>房屋管家</item>

        <item>搬家</item>
        <item>换锁</item>
        <item>手续</item>
        <item>律师</item>
        <item>房屋管家</item>
        <item>搬家</item>
        <item>换锁</item>
        <item>手续</item>
        <item>律师</item>
        <item>房屋管家</item>
        <item>搬家</item>
        <item>换锁</item>
        <item>手续</item>
        <item>律师</item>
        <item>房屋管家</item>
        <item>搬家</item>
        <item>换锁</item>
        <item>手续</item>
        <item>律师</item>
        <item>房屋管家</item>
        <item>搬家</item>
        <item>换锁</item>
        <item>手续</item>
        <item>律师</item>
    </string-array>
    <string name="title_activity_service_list">ServiceListActivity</string>
    <string name="title_activity_signin">SigninActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
