<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.zujia.android.zujia.ui.FilterActivity">


    <RelativeLayout style="@style/ItemStyle">

        <TextView
            style="@style/ItemTextStyle"
            android:text="@string/txtV_filter_certification" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ItemRightIconStyle"
            android:onClick="certificationClick" />

    </RelativeLayout>

    <View style="@style/ItemSplitter" />

    <RelativeLayout style="@style/ItemStyle">

        <TextView
            style="@style/ItemTextStyle"
            android:text="@string/txtV_filter_elevator" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ItemRightIconStyle"
            android:onClick="elevatorClick" />

    </RelativeLayout>

    <View style="@style/ItemSplitter" />

    <RelativeLayout style="@style/ItemStyle">

        <TextView
            style="@style/ItemTextStyle"
            android:text="@string/txtV_filter_decoration" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ItemRightIconStyle"
            android:onClick="decorationClick" />

    </RelativeLayout>

    <View style="@style/ItemSplitter" />

    <LinearLayout
        style="@style/ItemStyle"
        android:orientation="vertical">
        <TextView
            style="@style/ItemTextStyle"
            android:text="@string/txtV_filter_size" />

        <RadioGroup
            style="@style/ItemStyle"
            android:orientation="horizontal"
            android:contentDescription="nihao">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_one_room"
                android:id="@+id/radio_one_room"
                android:button="@null"
                android:layout_weight="1"
                android:onClick="radioButtonClick"
                android:gravity="center" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_two_rooms"
                android:id="@+id/radio_two_room"
                android:button="@null"
                android:layout_weight="1"
                android:onClick="radioButtonClick"
                android:gravity="center"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_three_rooms"
                android:id="@+id/radio_three_room"
                android:button="@null"
                android:layout_weight="1"
                android:onClick="radioButtonClick"
                android:gravity="center" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_more_rooms"
                android:id="@+id/radio_more_room"
                android:button="@null"
                android:layout_weight="1"
                android:onClick="radioButtonClick"
                android:gravity="center" />

        </RadioGroup>
    </LinearLayout>

    <View style="@style/ItemSplitter" />

    <LinearLayout
        style="@style/ItemStyle"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtV_filter_money"/>

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_filter_reset"
            android:onClick="restClick"
            android:background="@color/orange"
            android:layout_weight="2" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_filter_submit"
            android:onClick="submitClick"
            android:background="@color/orange"
            android:layout_weight="2" />
    </LinearLayout>


</LinearLayout>
