<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zujia.android.zujia.activity.custom.SearchActivity">

    <LinearLayout
        style="@style/WithMarginMainLayoutStyle"
        android:layout_centerHorizontal="true"
        android:id="@+id/searchLayout"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/editText4" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_one_room"
                android:id="@+id/radioButton"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_two_rooms"
                android:id="@+id/radioButton2"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_three_rooms"
                android:id="@+id/radioButton3"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_more_rooms"
                android:id="@+id/radioButton4"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_search_search"
        android:id="@+id/button2"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/searchLayout" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_search_around"
        android:id="@+id/button3"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button2" />

</RelativeLayout>
