<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zujia.android.zujia.activity.custom.CustomPostWantActivity"
    android:orientation="vertical">

    <LinearLayout
        style="@style/ItemStyle"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtV_post_want_location"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTxtLocation" />
    </LinearLayout>


    <LinearLayout
        style="@style/ItemStyle"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtV_post_want_money"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/eTxtMoney"
                android:numeric="integer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtV_post_want_tag"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        style="@style/ItemStyle"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtV_post_want_date"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:id="@+id/eTxtDate" />

    </LinearLayout>


    <LinearLayout
        style="@style/ItemStyle"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtV_post_type"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerType" />
    </LinearLayout>


    <LinearLayout
        style="@style/ItemStyle"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtV_post_want_other"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTxtOther" />

    </LinearLayout>

    <Button
        style="@style/ItemStyle"
        android:text="@string/btn_custom_certification_submit"
        android:id="@+id/btnSubmit"
        android:layout_gravity="center_horizontal"
        android:onClick="submitClick" />



</LinearLayout>
