<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.zujia.android.zujia.activity.SortActivity">

    <TextView
        style="@style/ItemStyle"
        android:text="@string/txtV_sort_default"
        android:onClick="defaultClick"
        android:textSize="@dimen/medium_text"
        android:textColor="@color/brown" />
    <TextView
        style="@style/ItemStyle"
        android:text="@string/txtV_sort_money"
        android:onClick="moneyClick"
        android:textColor="@color/brown"
        android:textSize="@dimen/medium_text" />
    <TextView
        style="@style/ItemStyle"
        android:text="@string/txtV_sort_distance"
        android:onClick="distanceClick"
        android:textColor="@color/brown"
        android:textSize="@dimen/medium_text" />
</LinearLayout>
