<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zujia.android.zujia.ui.custom.AboutActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/imgVIcon"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtV_about_version"
        android:layout_margin="10dp"
        android:id="@+id/txtVVersion"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        style="@style/MainLayoutStyle">

        <RelativeLayout style="@style/ItemStyle">

            <TextView
                style="@style/ItemTextStyle"
                android:text="@string/btn_about_intro" />

            <ImageView
                style="@style/ItemRightIconStyle"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <View style="@style/ItemSplitter" />

        <RelativeLayout style="@style/ItemStyle"
            android:layout_marginTop="15dp">

            <TextView
                style="@style/ItemTextStyle"
                android:text="@string/btn_about_update"/>

            <ImageView
                style="@style/ItemRightIconStyle"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <View style="@style/ItemSplitter" />

        <RelativeLayout style="@style/ItemStyle">

            <TextView
                style="@style/ItemTextStyle"
                android:text="@string/btn_about_update" />

            <ImageView
                style="@style/ItemRightIconStyle"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <View style="@style/ItemSplitter" />

        <RelativeLayout style="@style/ItemStyle">

            <TextView
                style="@style/ItemTextStyle"
                android:text="@string/btn_about_custom_agreement" />

            <ImageView
                style="@style/ItemRightIconStyle"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
